2015-04-21 Jerry DeLisle  <jvdelisle@gcc.gnu.org>

PR libgfortran/56743
	* io/list_read.c (CASE_SEPARATORS): Add case for '!'.
	(is_separator): Add condition for '!'.
	(eat_separator): Use notify_std to warn or errord if '!' is
	encountered before a proper separator.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@222271 138bc75d-0d04-0410-961f-82ee72b054a4